refactor: Challenge mapper
Added mapper for challenges